--- a/plugins/newspack-plugin/src/wizards/insights/tabs/components/_insights-charts.scss
+++ b/plugins/newspack-plugin/src/wizards/insights/tabs/components/_insights-charts.scss
@@ -164,6 +164,7 @@
 
 	&__metric-note-icon {
 		flex-shrink: 0;
+		margin-right: 4px;
 		color: wp-colors.$gray-600;
 	}
 
